--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,38 @@
-.page{
+.page {
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  width: 100%;
+  max-width: 800px;
 }
-main{
+main {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
-form{
+form {
   align-items: center;
   display: flex;
   justify-content: center;
+}
+
+.movies {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 16px;
+}
+
+.movie {
+  text-align: center;
+}
+
+.movie h3,
+.movie p {
+  padding: 0;
+}
+
+.movie img {
+  border-radius: 8px;
+  margin-top: 8px;
 }
